# momos-mcp

./: README.md
.github/workflows/: ci.yml
momos-mcp/: install.ps1
momos-mcp/momos_mcp/: _git.py  http_server.py  index.html  server.py  state.py
momos-mcp/tests/: test_windows_compat.py
pr-review-mcp/: README.md  index.html  pyproject.toml  requirements-dev.txt  server.py  setup.sh  test-long-lines.js
pr-review-mcp/janus_mcp/: __init__.py  __main__.py  _git.py  ai.py  diff_parser.py  http_server.py  index.html  server.py  state.py
pr-review-mcp/tests/: conftest.py  test_ai_review.py  test_http.py  test_parse_diff.py  test_shared_state.py  test_ui_comments.py  test_ui_diff.py  test_ui_expand.py  test_ui_smoke.py  test_ui_status.py  test_validate_ref.py
